fixed background and header sizing and alignment issues

--- a/style.css
+++ b/style.css
@@ -2,28 +2,24 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80);
     background-repeat: no-repeat;
-    background-size: auto;
-    width: 100vw;
+    background-size: cover;
     height: 100vh;
   }
   
   header {
     display: grid;
     grid-template-columns: 40% 60%;
-    width: 84%;
+    width: 86%;
     margin: auto;
     background-color: rgba(255,255,255,0.8);
   }
 
-  /* What kind of selector is this? */  
-  /* Class Selector? */
   .logo {
     width: 70px;
     height: 70px;
     margin: 1% 3%;
   }
 
-  /* This is an element within an element selector */ 
   nav > a {
     margin: 2% 1% 3%;
     height: 20%;
